--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@types/node": "18.15.5",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "axios": "^1.3.4",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
+    "ethers": "^6.2.2",
     "next": "13.2.4",
     "next-auth": "^4.20.1",
     "prisma": "^4.11.0",
